Fix proposal not scrolling on small heigth

--- a/app/style/Governance.less
+++ b/app/style/Governance.less
@@ -90,6 +90,10 @@
   padding: 1em;
 }
 
+.proposal-list-wrapper {
+  height: 100%;
+}
+
 .proposal-list {
   margin-top: 20px;
   margin-left: 38px;
